--- a/tetris.css
+++ b/tetris.css
@@ -22,3 +22,15 @@ body {
     height: 27px;
     border: 0.5px solid  rgb(202, 194, 194);
 }
+
+#ScoreTetris {
+    margin-right: auto;
+    margin-left: auto;
+    width: 120px;
+    height: 30px;
+    text-align: center;
+    background-color:white;
+    color: black;
+    font-weight: bolder;
+    border-radius: 20px 20px 20px 20px;
+}
