--- a/tetris.css
+++ b/tetris.css
@@ -7,6 +7,26 @@ body {
     text-align: center;
 }
 
+.board_design{
+    display: flex;
+    text-align: center;
+    margin-left: 350px;
+}
+.board_design> div{
+    text-align: center;
+    margin: 10px;
+    padding: 0px;
+}
+.button_design{
+    display: flex;
+    text-align: center;
+}
+.button_design> div{
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
+
 #BoardTetris table {
     border-collapse: collapse;
     font-size: 150%;
@@ -33,4 +53,20 @@ body {
     color: black;
     font-weight: bolder;
     border-radius: 20px 20px 20px 20px;
+}
+
+#Holded_piece table {
+    border-collapse: collapse;
+    font-size: 150%;
+    font-family: sans-serif;
+    font-weight: bold;
+    display: inline-block;
+    border: 3px solid white;
+}
+
+#Holded_piece table td {
+    background-color: black;
+    width: 20px;
+    height: 20px;
+    border: 0px;
 }
