--- a/tetris.css
+++ b/tetris.css
@@ -67,7 +67,7 @@ body {
     border-radius: 20px 20px 20px 20px;
 }
 
-#Holded_piece table {
+#Held_piece table {
     border-collapse: collapse;
     font-size: 150%;
     font-family: sans-serif;
@@ -76,7 +76,7 @@ body {
     border: 3px solid white;
 }
 
-#Holded_piece table td {
+#Held_piece table td {
     background-color: black;
     width: 6px;
     height: 6px;
