--- a/tetris.css
+++ b/tetris.css
@@ -68,7 +68,7 @@ body {
     background-color: black;
     width: 26px;
     height: 26px;
-    border: 0.5px solid  rgb(202, 194, 194);
+    border: 0.5px solid gray;
 }
 
 #ScoreTetris table{
